--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Bolo Bom a Bessa - eBook Bolos Caseiros</title>
+<title>E-Book Bolos Caseiros</title>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 <style>
 *{margin:0;padding:0;box-sizing:border-box;font-family:'Poppins',sans-serif;}
@@ -558,3 +558,4 @@ learnCards.forEach(card=>observer.observe(card));
 
 </body>
 </html>
+
