--- a/index.html
+++ b/index.html
@@ -555,6 +555,20 @@ A minha história é feita de fé, dedicação e muita doçura, mas o verdadeiro
 
 </section>
 
+<!-- Preço com texto ao lado -->
+<section id="preco" class="container preco-wrapper">
+  <div class="preco-card">
+    <img src="img/inicial.png" alt="eBook Bolos Caseiros">
+    <h3>R$ 97,00</h3>
+    <p>Pagamento único. Receba imediatamente após a compra.</p>
+    <a href="https://wa.me/5599999999999" class="btn">Comprar Agora</a>
+  </div>
+  <div class="preco-texto">
+    <p>Invista em você e no seu futuro doce! Com este eBook, você terá acesso a um verdadeiro manual de confeitaria lucrativa: 
+      receitas irresistíveis, técnicas profissionais e estratégias de negócio que funcionam. 
+      Mesmo que você seja iniciante, poderá começar a vender e lucrar desde já.</p>
+  </div>
+</section>
 
 <!-- =============================
      SEÇÃO DE DEPOIMENTOS
@@ -678,4 +692,3 @@ learnCards.forEach(card=>observer.observe(card));
 
 </body>
 </html>
-
