--- a/index.html
+++ b/index.html
@@ -637,8 +637,8 @@ A minha história é feita de fé, dedicação e muita doçura, mas o verdadeiro
 
 <section class="call-to-action">
   <div class="call-content">
-    <h2>Comece Hoje Mesmo!</h2>
-    <p>Transforme sua paixão em lucro. Aprenda com a especialista e venda bolos irresistíveis diariamente!</p>
+    <h2>Comece Sua Jornada Doce Hoje!</h2>
+    <p>Transforme receitas simples em um negócio lucrativo. Aprenda com Mariana Antum e descubra como vender todos os dias com confeitaria!</p>
     <a href="#preco" class="btn">Quero meu eBook!</a>
   </div>
 </section>
